Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -162,46 +162,51 @@ html.locked.email=${email_templates_dir}buildingbenjamins-Locked.html~{0}~{1}~{2
 html.survey.email=${email_templates_dir}survey.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
 html.invoice.email=${email_templates_dir}invoice.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
 
-validator.acctType.requiredMsg=***Account Type is required!
+validator.acctType.requiredMsg=*Account Type is required!
 
-validator.firstName.requiredMsg=***First Name is required!
-validator.lastName.requiredMsg=***Last Name is required!
-validator.citizenship.requiredMsg=***Must be US Citizen!
-validator.email.requiredMsg=***Email Address is required!
-validator.phoneno.requiredMsg=***Phone Number is required!
-validator.ssn.requiredMsg=***SSN is required!
-validator.ssn.formatMsg=***Enter valid SSN (xxx-xx-xxxx)!
-validator.dob.requiredMsg=***Birthdate is required!
-validator.dob.formatMsg=***Enter valid Birthdate (mm/dd/yyyy)!
+validator.firstName.requiredMsg=*First Name is required!
+validator.lastName.requiredMsg=*Last Name is required!
+validator.citizenship.requiredMsg=*Must be US Citizen!
+validator.email.requiredMsg=*Email Address is required!
+validator.phoneno.requiredMsg=*Phone Number is required!
+validator.ssn.requiredMsg=*SSN is required!
+validator.ssn.formatMsg=*Enter valid SSN (xxx-xx-xxxx)!
+validator.dob.requiredMsg=*Birthdate is required!
+validator.dob.formatMsg=*Enter valid Birthdate (mm/dd/yyyy)!
 
-validator.street.requiredMsg=***Street Address is required!
-validator.city.requiredMsg=***City is required!
-validator.state.requiredMsg=***State is required!
-validator.zip.requiredMsg=***Zip Code is required!
-validator.zip.formatMsg=***Enter valid Zip Code (xxxxx-xxxx)!
+validator.street.requiredMsg=*Street Address is required!
+validator.city.requiredMsg=*City is required!
+validator.state.requiredMsg=*State is required!
+validator.zip.requiredMsg=*Zip Code is required!
+validator.zip.formatMsg=*Enter valid Zip Code (xxxxx-xxxx)!
 
-validator.beneRelation.requiredMsg=***Benefiaciary Relationship is required!
-validator.beneType.requiredMsg=***Type of Beneficiary is required!
-validator.beneShare.requiredMsg=***Share is required!
+validator.beneRelation.requiredMsg=*Benefiaciary Relationship is required!
+validator.beneType.requiredMsg=*Type of Beneficiary is required!
+validator.beneShare.requiredMsg=*Share is required!
 
-validator.spfname.requiredMsg=***Name of SPF is required!
-validator.spfrelation.requiredMsg=***Relationship of SPF is required!
-validator.spftitle.requiredMsg=***Political title is required!
-validator.spfcountry.requiredMsg=***Country of office is required!
-validator.sharecompany.requiredMsg=***Company Name is required!
-validator.shareaddress.requiredMsg=***Company Adddress is required!
-validator.sharecity.requiredMsg=***Company city is required!
-validator.sharestate.requiredMsg=***Company state is required!
-validator.bdentity.requiredMsg=***Entity is required!
+validator.spfname.requiredMsg=*Name of SPF is required!
+validator.spfrelation.requiredMsg=*Relationship of SPF is required!
+validator.spftitle.requiredMsg=*Political title is required!
+validator.spfcountry.requiredMsg=*Country of office is required!
+validator.sharecompany.requiredMsg=*Company Name is required!
+validator.shareaddress.requiredMsg=*Company Adddress is required!
+validator.sharecity.requiredMsg=*Company city is required!
+validator.sharestate.requiredMsg=*Company state is required!
+validator.bdentity.requiredMsg=*Entity is required!
 
-validator.fundtype.requiredMsg=***Fund type is required!
-validator.investamt.requiredMsg=***Investment amount is required!
-validator.bankaccounttype.requiredMsg=***Account type is required!
-validator.bankname.requiredMsg=***Bank Name is required!
-validator.bankaccountname.requiredMsg=***Name on bank account is required!
-validator.abaroutingno.requiredMsg=***ABA Routing Number is required!
-validator.bankaccountno.requiredMsg=***Bank Account Number is required!
-validator.bankaccounttitle.requiredMsg=***Account Title is required!
-validator.deliveryfirm.requiredMsg=***Name of delivery firm is required!
-validator.accttype.requiredMsg=***Account Type is required!
-validator.fullpartial.requiredMsg=***Full/Partial transfer is required!
+validator.fundtype.requiredMsg=*Fund type is required!
+validator.investamt.requiredMsg=*Investment amount is required!
+validator.bankaccounttype.requiredMsg=*Account type is required!
+validator.bankname.requiredMsg=*Bank Name is required!
+validator.bankaccountname.requiredMsg=*Name on bank account is required!
+validator.abaroutingno.requiredMsg=*ABA Routing Number is required!
+validator.bankaccountno.requiredMsg=*Bank Account Number is required!
+validator.bankaccounttitle.requiredMsg=*Account Title is required!
+validator.deliveryfirm.requiredMsg=*Name of delivery firm is required!
+validator.accttype.requiredMsg=*Account Type is required!
+validator.fullpartial.requiredMsg=*Full/Partial transfer is required!
+
+validator.empstatus.requiredMsg=*Employment status is required!
+validator.empname.requiredMsg=*Employer name is required!
+validator.occupation.requiredMsg=*Occupation is required!
+validator.sourceincome.requiredMsg=*Source of income is required!
