Validation message property file

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -180,7 +180,7 @@ validator.state.requiredMsg=*State is required!
 validator.zip.requiredMsg=*Zip Code is required!
 validator.zip.formatMsg=*Enter valid Zip Code (xxxxx-xxxx)!
 
-validator.beneRelation.requiredMsg=*Benefiaciary Relationship is required!
+validator.beneRelation.requiredMsg=*Beneficiary Relationship is required!
 validator.beneType.requiredMsg=*Type of Beneficiary is required!
 validator.beneShare.requiredMsg=*Share is required!
 
@@ -189,9 +189,9 @@ validator.spfrelation.requiredMsg=*Relationship of SPF is required!
 validator.spftitle.requiredMsg=*Political title is required!
 validator.spfcountry.requiredMsg=*Country of office is required!
 validator.sharecompany.requiredMsg=*Company Name is required!
-validator.shareaddress.requiredMsg=*Company Adddress is required!
-validator.sharecity.requiredMsg=*Company city is required!
-validator.sharestate.requiredMsg=*Company state is required!
+validator.shareaddress.requiredMsg=*Company Address is required!
+validator.sharecity.requiredMsg=*Company City is required!
+validator.sharestate.requiredMsg=*Company State is required!
 validator.bdentity.requiredMsg=*Entity is required!
 
 validator.fundtype.requiredMsg=*Fund type is required!
