Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -180,6 +180,7 @@ validator.state.requiredMsg=*State is required!
 validator.zip.requiredMsg=*Zip Code is required!
 validator.zip.formatMsg=*Enter valid Zip Code (xxxxx-xxxx)!
 
+validator.benedetails.requiredMsg=*Beneficiary Details is required!
 validator.beneRelation.requiredMsg=*Beneficiary Relationship is required!
 validator.beneType.requiredMsg=*Type of Beneficiary is required!
 validator.beneShare.requiredMsg=*Share is required!
@@ -203,8 +204,15 @@ validator.abaroutingno.requiredMsg=*ABA Routing Number is required!
 validator.bankaccountno.requiredMsg=*Bank Account Number is required!
 validator.bankaccounttitle.requiredMsg=*Account Title is required!
 validator.deliveryfirm.requiredMsg=*Name of delivery firm is required!
+validator.deliveryfirmother.requiredMsg=*Name of other delivery firm is required!
 validator.accttype.requiredMsg=*Account Type is required!
 validator.fullpartial.requiredMsg=*Full/Partial transfer is required!
+
+validator.transfrequency.requiredMsg=*Frequency is required!
+validator.banktitle.requiredMsg=*Bank Account title is required!
+validator.transamt.requiredMsg=*Amount is required!
+validator.transstartdate.requiredMsg=*Start date is requied!
+
 
 validator.empstatus.requiredMsg=*Employment status is required!
 validator.empname.requiredMsg=*Employer name is required!
