--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -19,8 +19,6 @@ mbal=Your account has been locked because of a maximum number of incorrect login
 
 
 
-supportdesk.L1=support@invessence.com
-supportdesk.L2=support-L2@invessence.com
 support.info= <p style="font-size: 14px;">Please feel free to reach out to our support team with any questions.<br/><br/> \n\
 Contact us by phone <span style="font-weight: bold">{0}</span> or email to \n \
 <a href="mailto:{1}">{1}</a> </p> \n \
@@ -29,73 +27,6 @@ sales.info= <p>Please feel free to reach out to our sales team.<br/> \n\
 Contact us by phone <span style="font-weight: bold">(201) 977-1954</span> or email \n \
 <a href="mailto:sales@invessence.com">sales@invessence.com</a> with any questions.</p> \n \
 <br/> \n
-
-password.reset=We will send an email with a link to reset the password. Please check your email.
-txt.reset.email=\n \
-  We have received a request to reset your Invessence password. \
- To complete your request, please click on the below link and follow the instructions. \n\
-  {0}/setPassword.xhtml?u={1}&r={2}\n \
-\n\
-  If clicking on the link doesn't work, try copying and pasting it into your browser\n\
-\n\n \
-  Thank you \n \
-  Admin Team, Invessence.com\n
-
-txt.forgot.email=\n \
-  We have received a request to reset your password. \
- To complete your request, please click on the below link and follow the instructions. \n\
-  {0}/setPassword.xhtml?l={1}&r={4}\n \
-\n\
-  If clicking on the link doesn't work, try copying and pasting it into your browser\n\
-\n\n \
-  Thank you \n \
-  Admin Team\n \
-  {10}
-
-txt.activated.email=Dear {5}, \n\n \
-   Welcome to {10}! \n \
- Your userid ({2}) is now registered. \n \
- please visit us at  \n {0} \n \
- When you click on this link, your account will be activated. This link is valid for one use only.\n \
- We use two level authentication to confirm that the activate an account. \n \
- By clicking, on the link, we can confirm that the email on the account is same as the one registered. \n\
- Thank you,\n \
- Admin Team \n\
- {10}\n
-
-txt.welcome.email=Dear {5}, \n\n \
-   Welcome to {10}. \n \
- Your userid ({2}) is now registered. \n \
- please visit us at  \n {0} \n \
- You will be prompted to set your password.  Then you'll be able to logon. \n \
- If clicking on the link does not work, try copying and pasting it into your browser.\n \
- If you did not register for this service, please email us directly at {8} to resolve this issue. \n \
- Thank you,\n \
- Admin Team\n \
- {10} \n
-
-txt.advisor_welcome.email=Dear {5}, \n\n \
-  Welcome to {10}. \n \
-Your userid ({2}) is now registered. \n \
-please visit us at  \n {0} \n \
-You will be prompted to set your password.  Then you'll be able to logon. \n \
-If clicking on the link does not work, try copying and pasting it into your browser.\n \
-If you did not register for this service, please email us directly at {8} to resolve this issue. \n \
-Thank you,\n \
-Admin Team\n \
-{10} \n
-
-txt.locked.email=\n\
-  Your account has been locked because of a maximum number of incorrect login attempts. \n \
-  To unlock your account, please reset your password. \n \
-  \n\n \
-  Please follow this link: {0}/setPassword.xhtml?l={1}&r={4}\n \
-  to reset your password.\n \
-  If clicking on the link does not work, try copying and pasting it into your browser.\n \
-  \n\
-  Thank you, \n \
-  Admin Team, \n \
-  {10} \n
 
 welcome.firsttime=Welcome!  Let's start with creating your personalized portfolio. \
 Click on the below (Add Portfolio) button to get started.
@@ -144,23 +75,17 @@ dctd.101="TD service is not active"
 
 dctd.EX.101="TD service system error."
 
-
-demouser.id.taken=This email address was already registered.   \
-  Another email is being sent to create your password, so that you can access your portfolio.
-
-survey.email=Thank you {0} {1}, \n\n \
-Here is the link {2}\n \
-to get you started on personalized investment survey.  It will take approx 5-10 minutes to complete.\n \
-Admin Team, \n\Invessence.com\n
-
-html.support.info=${email_templates_dir}buildingbenjamins-SupportInfo.html
-html.reset.email=${email_templates_dir}buildingbenjamins-Reset.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
-html.activated.email=${email_templates_dir}buildingbenjamins-Activated.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
-html.welcome.email=${email_templates_dir}buildingbenjamins-Welcome.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
-html.welcome-adv.email=${email_templates_dir}buildingbenjamins-Welcome-Adv.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
-html.locked.email=${email_templates_dir}buildingbenjamins-Locked.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
-html.survey.email=${email_templates_dir}survey.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
-html.invoice.email=${email_templates_dir}invoice.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+validator.investment.required=Min. of {1} investment is required!
+validator.investment.constraint=Min. of {1} investment is required!
+validator.age.required=Age is required!
+validator.age.constraint=Age should be between 18 and 100.
+validator.goal.required=Please choose investment strategy
+validator.goal.constraint=Please choose investment strategy
+validator.retireage.constraint=When do you plan to retire?
+validator.otherhorizon.required=When do you plan to use these funds?
+validator.collegehorizon.constraint=When does your child plan to attend college?
+validator.risk_ans_radio.required=Please choose one of these choices
+validator.risk_ans_image.required=Please click on one of the images below to select appropriate risk.
 
 validator.acctType.requiredMsg=*Account Type is required!
 
