Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -103,7 +103,8 @@ validator.ssn.formatMsg=*Enter valid SSN (xxx-xx-xxxx).
 validator.dob.requiredMsg=*Birthdate is required.
 validator.dob.formatMsg=*Enter valid Birthdate (mm/dd/yyyy).
 
-validator.street.requiredMsg=*Street address is required.
+validator.resstreet.requiredMsg=*Residence Street address is required.
+validator.mailstreet.requiredMsg=*Mailing Street address is required.
 validator.city.requiredMsg=*City is required.
 validator.state.requiredMsg=*State is required.
 validator.zip.requiredMsg=*Zip Code is required.
@@ -129,6 +130,8 @@ validator.investamt.requiredMsg=*Investment amount is required.
 validator.bankaccounttype.requiredMsg=*Account type is required.
 validator.bankname.requiredMsg=*Bank name is required.
 validator.bankaccountname.requiredMsg=*Name on bank account is required.
+validator.bankcityState.requiredMsg=*Bank City/State is required!
+validator.bankphoneno.requiredMsg=*Bank Phone number is required!
 validator.abaroutingno.requiredMsg=*ABA Routing Number is required.
 validator.bankaccountno.requiredMsg=*Bank Account Number is required.
 validator.bankaccounttitle.requiredMsg=*Account Title is required.
