--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -2,8 +2,8 @@
 mtt=Thank you.
 mtp=Thank You For Your Participation!
 mtw=Welcome
-mtse=System Error!
-mtsw=Warning!
+mtse=System Error
+mtsw=Warning
 mtsn=Notice.
 mtal=Account Locked!
 
@@ -15,11 +15,11 @@ mbal=Your account has been locked because of a maximum number of incorrect login
 
 support.info= <p style="font-size: 14px;">Please feel free to reach out to our support team with any questions.<br/><br/> \n\
 Contact us by phone <span style="font-weight: bold">{0}</span> or email to \n \
-<a href="mailto:{1}">{1}</a> </p> \n\n \
-sales.info= <p>Please feel free to reach out to our sales team.<br/> \n\
-Contact us by phone <span style="font-weight: bold">(201) 977-1954</span> or email \n \
-<a href="mailto:sales@invessence.com">sales@invessence.com</a> with any questions.</p> \n \
-<br/> \n
+<a href="mailto:{1}">{1}</a> </p>
+
+sales.info=<p>Please feel free to reach out to our sales team.<br/> \n \
+Contact us by phone <span style="font-weight: bold">{0}</span> with any questions.</p> \n \
+<br/>
 
 welcome.firsttime=Welcome!  Let's start with creating your personalized portfolio. \
 Click on the below (Add Portfolio) button to get started.
@@ -72,9 +72,9 @@ dctd.100=Cannot start TD application (No account number was assigned).
 dctd.101=TD service is not active.
 dctd.EX.101=TD service system error.
 
-validator.investment.required=Min. of {0} investment is required!
-validator.investment.constraint=Min. of {0} investment is required!
-validator.age.required=Age is required!
+validator.investment.required=Minimum of {0} investment required.
+validator.investment.constraint=Minimum of {0} investment required.
+validator.age.required=Age is required.
 validator.age.constraint=Age must be between 18 and 100 years.
 validator.goal.required=Please choose investment strategy
 validator.goal.constraint=Please choose investment strategy
@@ -90,7 +90,6 @@ validator.otherhorizon.constraint=Number of years to invest must be between 1 an
 validator.risk.radio.required=Please choose one of these choices
 validator.risk.meter.required=Please select the image that best represents your tolerance for risk.
 validator.risk.projection.required=Please choose an investment strategy.
-
 
 validator.acctType.requiredMsg=*Account Type is required.
 validator.firstName.requiredMsg=*First Name is required.
@@ -144,7 +143,6 @@ validator.transfrequency.requiredMsg=*Frequency is required.
 validator.banktitle.requiredMsg=*Bank Account title is required.
 validator.transamt.requiredMsg=*Amount is required.
 validator.transstartdate.requiredMsg=*Start date is required.
-
 
 validator.empstatus.requiredMsg=*Employment status is required.
 validator.empname.requiredMsg=*Employer name is required.
