Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -148,3 +148,4 @@ validator.empstatus.requiredMsg=*Employment status is required.
 validator.empname.requiredMsg=*Employer name is required.
 validator.occupation.requiredMsg=*Occupation is required.
 validator.sourceincome.requiredMsg=*Source of income is required.
+validator.beneSharegreter.requiredMsg=*Share should be greater than 0!
