--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -68,6 +68,7 @@ signup.EX.103=Exception: There was an issue with signup.  Please call support.
 signup.EX.104=Exception: There was an error attempting to save the questions/answer section.
 signup.EX.105=Exception: Failed to save question/answer data. Your session may have timed out.
 
+custody.100=Custody process is not defined.
 dctd.100=Cannot start TD application (No account number was assigned).
 dctd.101=TD service is not active.
 dctd.EX.101=TD service system error.
