Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -150,3 +150,5 @@ validator.empname.requiredMsg=*Employer name is required.
 validator.occupation.requiredMsg=*Occupation is required.
 validator.sourceincome.requiredMsg=*Source of income is required.
 validator.beneSharegreter.requiredMsg=*Share should be greater than 0!
+
+validator.validemail.requiredMsg=*Enter valid  Email address!
