--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -149,6 +149,6 @@ validator.empstatus.requiredMsg=*Employment status is required.
 validator.empname.requiredMsg=*Employer name is required.
 validator.occupation.requiredMsg=*Occupation is required.
 validator.sourceincome.requiredMsg=*Source of income is required.
-validator.beneSharegreter.requiredMsg=*Share should be greater than 0!
+validator.beneSharegreter.requiredMsg=*Share should be greater than 0.
 
-validator.validemail.requiredMsg=*Enter valid  Email address!
+validator.validemail.requiredMsg=*Enter valid  Email address.
