--- a/tcm/modules/web/src/main/resources/log4j.properties
+++ b/tcm/modules/web/src/main/resources/log4j.properties
@@ -18,9 +18,19 @@ log4j.appender.logfile.Append = true
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
+log4j.appender.bwslogfile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.bwslogfile.File=${catalina.base}/logs/broker-webservices.log
+log4j.appender.bwslogfile.Append = true
+log4j.appender.bwslogfile.MaxBackupIndex=3
+log4j.appender.bwslogfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.bwslogfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
+log4j.additivity.com.invessence.ws=false
+
+log4j.logger.com.invessence.ws=debug, bwslogfile
+log4j.logger.org.apache.axis=ERROR, stdout, bwslogfile
 log4j.logger.org.springframework=ERROR,stdout
-log4j.logger.org.apache.axis=ERROR,stdout
 log4j.logger.org.apache.commons=ERROR,stdout
 log4j.logger.httpclient.wire=ERROR,stdout
+
 
