--- a/tcm/modules/download-services/src/main/resources/parameters.properties
+++ b/tcm/modules/download-services/src/main/resources/parameters.properties
@@ -7,3 +7,7 @@
 #
 #
 #
+
+download.service.success= Success Message
+download.service.error= Er~h~ror Mess~g~age  ~a~
+download.service.warning= Warning Message
