Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -136,7 +136,7 @@ validator.abaroutingno.requiredMsg=*ABA Routing Number is required.
 validator.bankaccountno.requiredMsg=*Bank Account Number is required.
 validator.bankaccounttitle.requiredMsg=*Account Title is required.
 validator.deliveryfirm.requiredMsg=*Name of delivery firm is required.
-validator.deliveryfirmother.requiredMsg=*Name of another delivery firm is required.
+validator.deliveryfirmother.requiredMsg=*Name of other delivery firm is required.
 validator.accttype.requiredMsg=*Account Type is required.
 validator.fullpartial.requiredMsg=*Full/Partial transfer is required.
 
