--- a/Invessence/modules/download-services/src/main/resources/parameters.properties
+++ b/Invessence/modules/download-services/src/main/resources/parameters.properties
@@ -9,5 +9,5 @@
 #
 
 download.service.success= Success Message
-download.service.error= Er~h~ror Mess~g~age  ~a~
+download.service.error= Error Message
 download.service.warning= Warning Message
